feat: add login and dashboard pages + updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,66 +17,7 @@ body {
     overflow: hidden;
 
     .logo {
-      padding: 1.5rem 0 1rem 0;
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: .875rem;
-      min-width: 240px;
-      background-color: var(--white);
-      border-right: 1px solid var(--border-color);
-      overflow-y: auto;
-      overflow-x: hidden;
-      padding-bottom: 1.5rem;
-
-      .nav-items {
-        display: flex;
-        flex-direction: column;
-
-        .nav-item {
-          padding: .25rem 1.5rem;
-          position: relative;
-
-          a {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 192px;
-            height: 50px;
-            border-radius: .5rem;
-            text-decoration: none;
-            font-size: .875rem;
-
-            &:hover {
-              background-color: var(--primary-hover);
-              color: var(--primary);
-            }
-
-            &.selected {
-              background-color: var(--primary);
-              color: var(--white);
-              font-weight: 600;
-            }
-          }
-        }
-      }
-
-      .divider {
-        width: 100%;
-        height: 1px;
-        background-color: var(--border-color);
-      }
-
-      .title {
-        width: 100%;
-        padding: 0 2.5rem;
-        text-align: left;
-        opacity: .6;
-        font-size: .75rem;
-      }
+      padding: 2rem 0;
     }
 
     .section {
@@ -86,154 +27,6 @@ body {
       height: 100%;
       overflow-y: auto;
       overflow-x: hidden;
-
-      .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 1rem 5rem;
-        background-color: var(--white);
-        border-bottom: 1px solid var(--border-color);
-        border-left: 1px solid var(--white);
-
-        .searchbar {
-          display: flex;
-          align-items: center;
-          justify-content: flex-start;
-          width: 388px;
-          min-width: 240px;
-          height: 38px;
-          gap: .5rem;
-          background-color: var(--bg-light);
-          border: 1px solid var(--border-color);
-          border-radius: 5rem;
-          padding: 0 .5rem 0 1rem;
-
-          input {
-            padding: .75rem .75rem .75rem 0;
-            background-color: transparent;
-            border: none;
-            width: 100%;
-
-            &:focus {
-              outline: none;
-            }
-
-            &::placeholder {
-              color: var(--text);
-              opacity: .5;
-            }
-          }
-        }
-
-        .right {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 1.5rem;
-
-          .notification {
-            position: relative;
-            padding: 0 .5rem;
-
-            .count {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              width: 18px;
-              height: 18px;
-              font-size: .75rem;
-              font-weight: 600;
-              border-radius: 5rem;
-              background-color: var(--danger);
-              color: #FFF;
-              position: absolute;
-              top: -8px;
-              right: 2px;
-              outline: 2px solid rgba(249, 60, 101, 0.15);
-            }
-          }
-
-          .language {
-            display: flex;
-            align-items: center;
-            gap: .5rem;
-            padding: .5rem;
-            border-radius: .5rem;
-            cursor: pointer;
-            transition: all .2s ease;
-
-            img {
-              width: .75rem;
-
-              &:nth-child(1) {
-                width: 40px;
-                height: 27px;
-                object-fit: contain;
-              }
-            }
-
-            &:hover {
-              background-color: #F5F6FA;
-            }
-          }
-
-          .user {
-            display: flex;
-            align-items: center;
-            gap: 1.125rem;
-            padding: 0 .5rem;
-
-            img {
-              width: 44px;
-              height: 44px;
-              object-fit: cover;
-              border-radius: 5rem;
-            }
-
-            .user-name {
-              display: flex;
-              flex-direction: column;
-              gap: .25rem;
-
-              p {
-                font-size: .875rem;
-                font-weight: 700;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-                overflow: hidden;
-              }
-
-              span {
-                font-size: .75rem;
-                font-weight: 500;
-                color: var(--subtitle);
-              }
-            }
-
-            .angle-down {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              border-radius: 5rem;
-              border: 1px solid var(--border-color);
-              min-width: 18px;
-              height: 18px;
-              cursor: pointer;
-              transition: all .2s ease;
-
-              img {
-                width: 8px;
-                height: 8px;
-              }
-
-              &:hover {
-                background-color: var(--bg-light);
-              }
-            }
-          }
-        }
-      }
 
       .container {
         display: flex;
@@ -248,115 +41,6 @@ body {
           font-size: 2rem;
           font-weight: 700;
           letter-spacing: -0.4px;
-        }
-
-        .small-cards {
-          display: flex;
-          gap: 1.75rem;
-
-          .card {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-            width: 100%;
-            padding: 1rem;
-            background-color: var(--white);
-            box-shadow: var(--elevation-shadow);
-            border-radius: .875rem;
-
-            .top {
-              display: flex;
-
-              .left {
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-                width: 100%;
-
-                h3 {
-                  font-size: 1rem;
-                  font-weight: 600;
-                  opacity: .7;
-                }
-
-                h2 {
-                  font-size: 1.75rem;
-                  font-weight: 700;
-                }
-              }
-
-              .icon {
-                display: grid;
-                place-items: center;
-                min-width: 60px;
-                height: 60px;
-                border-radius: 1.375rem;
-
-                &.purple {
-                  background-color: #E5E4FF;
-                }
-
-                &.yellow {
-                  background-color: #FFF3D6;
-                }
-
-                &.green {
-                  background-color: #D9F7E8;
-                }
-
-                &.orange {
-                  background-color: #FFDED1;
-                }
-              }
-            }
-
-            .bottom {
-              display: flex;
-              align-items: center;
-              gap: .5rem;
-
-              p {
-                font-size: 1rem;
-                font-weight: 600;
-
-                span {
-                  &.up {
-                    color: var(--success);
-                  }
-
-                  &.down {
-                    color: var(--danger);
-                  }
-                }
-              }
-            }
-          }
-        }
-
-        .card {
-          display: flex;
-          flex-direction: column;
-          gap: 3rem;
-          padding: 2rem;
-          background-color: var(--white);
-          box-shadow: var(--elevation-shadow);
-          border-radius: .875rem;
-
-          .title {
-            font-size: 1.5rem;
-            font-weight: 700;
-            letter-spacing: -0.5px;
-
-            &.flex {
-              display: flex;
-              align-items: center;
-              justify-content: space-between;
-            }
-          }
-
-          .graphic {
-            margin: 2rem 0;
-          }
         }
       }
     }
