--- a/pages/login/assets/css/style.css
+++ b/pages/login/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    min-width: 550px;
     background-color: var(--white);
     padding: 3rem;
     border-radius: 1.5rem;
@@ -53,6 +54,11 @@ body {
           &:focus {
             outline: none;
             border: 1px solid var(--primary);
+          }
+
+          &::placeholder {
+            color: var(--text);
+            opacity: .4;
           }
         }
 
@@ -115,6 +121,12 @@ body {
             opacity: .6;
             text-decoration: none;
           }
+        }
+      }
+
+      .message-flex {
+        a {
+          color: var(--primary);
         }
       }
     }
