--- a/pages/login/assets/css/style.css
+++ b/pages/login/assets/css/style.css
@@ -52,24 +52,6 @@ body {
         width: 100%;
         font-weight: 600;
 
-        input {
-          background-color: #F1F4F9;
-          border: 1px solid #D8D8D8;
-          font-size: 1.125rem;
-          padding: 1rem;
-          border-radius: .5rem;
-
-          &:focus {
-            outline: none;
-            border: 1px solid var(--primary);
-          }
-
-          &::placeholder {
-            color: var(--text);
-            opacity: .4;
-          }
-        }
-
         &.checkbox-container {
           input[type="checkbox"] {
             display: none;
@@ -128,6 +110,10 @@ body {
             color: var(--text);
             opacity: .6;
             text-decoration: none;
+
+            &:hover {
+              text-decoration: underline;
+            }
           }
         }
       }
