--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -11,11 +11,36 @@
     font-size: 1.5rem;
     font-weight: 700;
     letter-spacing: -0.5px;
+  }
 
-    &.flex {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+  .flex-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+  }
+
+  &.medium {
+    padding: 1.5rem;
+    gap: 2.5rem;
+  }
+
+  &.small {
+    padding: 1rem;
+    gap: 1.75rem;
+  }
+
+  .month-select {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: .875rem;
+    font-weight: 700;
+    padding: .375rem 1.25rem;
+    border: 1px solid var(--border-color);
+    border-radius: .5rem;
+    background-color: #FCFDFD;
+
+    &:focus {
+      outline: 0;
     }
   }
 }
